Adapt building scripts and running script for the new unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,6 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 ###############################################################################
-## File globbing
-###############################################################################
-file(GLOB_RECURSE dotObjParser_SRC src/*.cpp src/*.h)
-
-###############################################################################
 ## Enable warnings
 ###############################################################################
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
@@ -34,8 +29,19 @@ endif()
 ###############################################################################
 ## Target definitions
 ###############################################################################
-add_executable(objparser ${dotObjParser_SRC})
+if(DEFINED BUILD_TESTS)
+  file(GLOB_RECURSE org_SRC src/*.cpp src/*.h)
+  set(org_SRC_lst ${org_SRC})
+  list(REMOVE_ITEM org_SRC_lst ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
 
-target_compile_options(objparser PUBLIC -std=c++14 $<$<CONFIG:DEBUG>:-DOBJ_DEBUG>)
+  file(GLOB_RECURSE tests_SRC tests/*.cpp tests/*.h)
+  add_executable(objparser_tests ${tests_SRC} ${org_SRC_lst})
+  target_compile_options(objparser_tests PUBLIC -std=c++14 $<$<CONFIG:DEBUG>:-DOBJ_DEBUG>)
+  target_include_directories(objparser_tests PUBLIC src/ tests/)
+else()
+  file(GLOB_RECURSE dotObjParser_SRC src/*.cpp src/*.h)
+  add_executable(objparser ${dotObjParser_SRC})
+  target_compile_options(objparser PUBLIC -std=c++14 $<$<CONFIG:DEBUG>:-DOBJ_DEBUG>)
+  target_include_directories(objparser PUBLIC src/)
+endif()
 
-target_include_directories(objparser PUBLIC src/)
